removed unused code

--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -5,7 +5,7 @@
 .card-items {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 12px;
-  background-color: #dfac7c;
+  /* background-color: #dfac7c; */
 }
 .img-container {
   position: relative;
