--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,7 +1,7 @@
   .sidebar{
     background-color:#E1E1E1;
     height: 100%;
-    width: 35vw;
+    width: 30%;
     position: fixed;
     z-index: 1;
     top: 55px;
