--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,20 @@
-<p>navbar works!</p>
+<div class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
+              Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;">
+              Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;"> 
+              Logout <span><i class="fa-solid fa-right-from-bracket"></i></span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
