--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -7,13 +7,14 @@
     <h4 class="d-flex justify-content-center">Add Project</h4>
 
     <form (ngSubmit)="onSubmit()">
-            <input type="text" name="text" [(ngModel)]="text" class="form-control" id="text" placeholder="Project Name">
-            <textarea class="form-control" name="textarea" id="Textarea" rows="3" placeholder="Project Description" type="text"></textarea>
-            <input type="text" class="form-control" name="members" id="members" placeholder="Project Members">
-            <input type="text" class="form-control" name="link" id="link" placeholder="Project Link">
-            <input class="form-control" name="file" type="file" id="formFile">
+            <input type="text" name="text" [(ngModel)]="text" class="form-control" id="text" placeholder="Project Name" ngModel required #form="form">
+            <textarea class="form-control" name="textarea" id="Textarea" rows="3" placeholder="Project Description" type="text" ngModel required></textarea>
+            <input type="text" class="form-control" name="members" id="members" placeholder="Project Members" ngModel required>
+            <input type="text" class="form-control" name="link" id="link" placeholder="Project Link" ngModel required>
+            <input class="form-control" name="file" type="file" id="formFile" ngModel required>
+            <div class="d-grid gap-2 col-6 mx-auto">
+              <button class="btn btn-success" type="Submit" disabled="form">Add Project</button>
+          </div>
     </form>
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-success" type="Submit">Add Project</button>
-      </div>
+   
 </div>
