--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,10 +16,10 @@
   <h5 class="d-flex justify-content-center">BIO DATA</h5>
 
   <div class="follow">
-    <button type="button" class="btn btn-warning">
+    <button type="button" class="btn btn-primary">
       Followers: <span class="badge bg-secondary">300</span>
     </button>
-    <button type="button" class="btn btn-warning">
+    <button type="button" class="btn btn-primary">
       Following: <span class="badge bg-secondary">50</span>
     </button>
     <button type="button" class="btn btn-secondary">Edit Profile</button>
@@ -33,9 +33,11 @@
       <div class="card-body">
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><h5>Project Description:</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nobis quidem praesentium quibusdam labore voluptatum minus ipsam modi? Doloremque dolor consequatur voluptatibus voluptatem animi corporis sint nesciunt nostrum perferendis dignissimos.</li>
+      </ul>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -43,9 +45,11 @@
       <div class="card-body">
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><h5>Project Description:</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nobis quidem praesentium quibusdam labore voluptatum minus ipsam modi? Doloremque dolor consequatur voluptatibus voluptatem animi corporis sint nesciunt nostrum perferendis dignissimos.</li>
+      </ul>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -53,17 +57,12 @@
       <div class="card-body">
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><h5>Project Description:</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nobis quidem praesentium quibusdam labore voluptatum minus ipsam modi? Doloremque dolor consequatur voluptatibus voluptatem animi corporis sint nesciunt nostrum perferendis dignissimos.</li>
+      </ul>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
-    
   </div>
-
-  
-
-
-
-  
 </div>
