added clases for auth data

--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -7,8 +7,8 @@
     <h3 id="reg">Edit Your Profile</h3>
     
     <div class='insameline'> 
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Email">
+    <input type="text" placeholder="Username" value="papa">
+    <input type="text" placeholder="Email" value="kyalo@gmail.com">
 
     <input type="text" placeholder="Username">
     <input type="text" placeholder="Email">   
