--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<!-- <app-navbar></app-navbar> -->
 
-<!-- <app-register></app-register> -->
-<app-login></app-login>
+<app-register></app-register>
+<!-- <app-login></app-login> -->
 
 <!-- <app-edit-profile></app-edit-profile> -->
