--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,6 +15,14 @@
     <h3 id="reg">Please Login</h3>
     <input type="text" placeholder="Email">
     <input type="text" placeholder="Password">
+
+    <div class="already">
+        <a routerLink="/register">Don't' have an account please register</a>
+    </div>
+
     <a href="#"><button type="button">Login</button></a>
 </div>
 </section>
+
+
+
