--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,15 +4,51 @@
         <h2 id="header">Moringa School Project Tracker</h2>
     </section>
     
+
     <div class="frontimg">
         <img src="../../../assets/auth-images/front.jpg" alt="front img" height="600px" width="650px">
     </div>
 <div class="bookers">
     <h3 id="reg">Please Register</h3>
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Email">
-    <input type="text" placeholder="Password">
-    <input type="text" placeholder="Confirm Password">
-    <a href="#"><button type="button">Register</button></a>
+
+    <form #registerForm="ngForm" novalidate (ngSubmit)="onSubmit()" >
+       
+
+    <input type="text" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+    class="form-control"   name="username" [(ngModel)]="registerModel.name">
+    <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Username is required</small>
+
+
+
+    <input type="email" required #email="ngModel" [class.is-invalid]="email.invalid && email.touched"
+    class="form-control"   name="email" [(ngModel)]="registerModel.email">
+    <small class="text-danger" [class.d-none] =" email.valid || email.untouched">Email is required in email format</small>
+   
+
+    <input type="password" required #password="ngModel" [class.is-invalid]="password.invalid && password.touched"
+    class="form-control" name="password" [(ngModel)]="registerModel.password">
+    <small class="text-danger" [class.d-none] =" password.valid || password.untouched">Password is required not less than 8 characters</small>
+
+
+
+ <input type="password" required #confirmPassword="ngModel" [class.is-invalid]="confirmPassword.invalid && confirmPassword.touched"
+ class="form-control" name="confirmPassword" [(ngModel)]="registerModel.passwordConfirmation">
+ <small class="text-danger" [class.d-none] =" confirmPassword.valid || confirmPassword.untouched">Field required</small>
+
+
+
+</form>
+
+<button [disabled]="registerForm.form.invalid" type="submit">Register</button>
+
+
+
+
+
+<div class="already">
+    <a routerLink="/register">Already have an account please login</a>
 </div>
+</div>
+
+
 </section>
