modified profile html and css components

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <h4 class="d-flex justify-content-center">Wilfred Papa</h4>
-  <h5 class="d-flex justify-content-center"><small>ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus laboriosam tenetur ab neque itaque quia dolore fugit praesentium consequuntur laudantium. Libero, eveniet. Voluptas voluptatum hic cum. Totam veritatis reiciendis sed!</small></h5>
+  <p class="d-flex justify-content-center">ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus laboriosam tenetur ab neque itaque quia dolore fugit praesentium consequuntur laudantium. Libero, eveniet. Voluptas voluptatum hic cum. Totam veritatis reiciendis sed!</p>
   
 
   <div class="follow">
@@ -50,7 +50,7 @@
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</h5>
+        <p class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</p>
       </div>
       <div class="card-body">
         <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
@@ -61,8 +61,9 @@
       <div class="card-body">
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
+      
       <div class="card-body">
-        <h5 class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</h5>
+        <p class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</p>
       </div>
       <div class="card-body">
         <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
