added edit profile

--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -5,24 +5,30 @@
     </div>
 <div class="bookers">
     <h3 id="reg">Edit Your Profile</h3>
-    
-    <div class='insameline'> 
-    <input type="text" placeholder="Username" value="papa">
-    <input type="text" placeholder="Email" value="kyalo@gmail.com">
+    <form>
+<div class="avar">
+<img src="https://cdn.pixabay.com/photo/2021/12/21/08/29/owl-6884773_960_720.jpg" class="avatar"
+    alt="avatar">
+</div>
 
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Email">   
+    <div class='insameline'> 
+        <input type="text" placeholder="First Name">
+        <input type="text" placeholder="Last Name">
+        <input type="text" placeholder="Username">
+
 </div>
 
 <div class='insameline-1'> 
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Email">
+    <input type="text" placeholder="phone"> 
+    <input type="text" placeholder="Bio"> 
+    <div class="upload">
+        <input type="file" class="form-control" id="customFile" />
+        </div>     
 
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Email">
-    
 </div>
-<input type="file" id="myFile" name="filename">
+
+
 <a href="#"><button type="button">Update</button></a>
+</form>
 </div>
 </section>
