--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-register></app-register>
+<!-- <app-register></app-register> -->
 <!-- <app-login></app-login> -->
 
-<!-- <app-edit-profile></app-edit-profile> -->
+<app-edit-profile></app-edit-profile>
