--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -5,7 +5,6 @@
 
 body {
     font-family: "Open Sans", sans-serif;
-    overflow: hidden;
 }
 
 .bookers {
@@ -47,14 +46,14 @@ body {
 
 
 #header{
-    color: blue;
+    color: #0F1E3A;
     font-weight: 900;
     border: 30px;
     margin-left: 100px;
 }
 
 #reg{
-    color: blue;
+    color: #0F1E3A;
     font-weight: 900;
     margin-left: 100px;
 }
@@ -65,4 +64,5 @@ body {
   font-weight: 900;
   text-decoration: none;
 }
+
 
