--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-landing></app-landing>
+<!-- <app-landing></app-landing> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <!-- <app-about></app-about> -->
