--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -16,11 +16,11 @@
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
-              Home <span><i class="fa-light fa-house-user"></i></span></a>
+              Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;">
-              Profile <span><i class="fa-light fa-square-user"></i></span></a>
+              Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;"> 
@@ -47,7 +47,6 @@
         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa-light fa-circle-envelope"></i></a></li>
       </ul>
       <div class="footer-bottom">
         <p style="float: left;">Copyright &copy;2022 <a href="#" style="text-decoration: none; color: aliceblue;"> ProjectTracker</a> </p>
