--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -2,36 +2,37 @@ body, html {
     height: 50%;
   }
   
-  * {
+* {
     box-sizing: border-box;
-  }
+}
   
-  p{
+p{
     font-size: 20px;
-  }
+}
   
-  h3{
+h3{
     font-size: 30px;
-  }
-  .bg-image {
+}
+
+.bg-image {
     /* The image used */
-    background-image: url("/src/assets/images/about.jpg");
+    background-color: #cacdd2;
   
-    /* Add the blur effect */
+    /* Add the blur effect
     filter: blur(4px);
     -webkit-filter: blur(5px);
   
     /* Full height */
-    height: 100%;
+    /* height: 100%; */
   
     /* Center and scale the image nicely */
-    background-position: center;
+    /* background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-  }
+    background-size: cover; */
+} 
   
   /* Position text in the middle of the page/image */
-  .bg-text {
+.bg-text {
     background-color: rgb(0,0,0); 
     background-color: rgba(30,53,87,0.4); 
     color: white;
@@ -45,7 +46,7 @@ body, html {
     width: 80%;
     padding: 20px;
     text-align: center;
-  }
+}
 
 /* footer */
 footer{
