--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -55,6 +55,18 @@
             <img src="../../../assets/images/web.png" class="rounded float-end" 
             alt="..." width="300px" height="350px"> 
         </div>
+        <br>
+        <br>
+
+        <div class="col-6">
+          <button type="button" class="btn btn-link" 
+          style="background-color: #101F3C;">Android Development</button>     
+        </div>
+
+        <div class="col-6">
+          <button type="button" class="btn btn-link" 
+          style="background-color: #101F3C;">Web Development</button>
+        </div>
 
       <div class="row">
         <div class="column">
