--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -58,17 +58,16 @@
         <br>
         <br>
 
-        <div class="col-6">
+        <div class="col-6 track">
           <button type="button" class="btn btn-link" 
-          style="background-color: #101F3C;">Android Development</button>     
+          style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
+        </div>
+        <div class="col-6 track">
+          <button type="button" class="btn btn-link" 
+          style="background-color: #101F3C; color: aliceblue; text-decoration: none">Web Development</button>
         </div>
 
-        <div class="col-6">
-          <button type="button" class="btn btn-link" 
-          style="background-color: #101F3C;">Web Development</button>
-        </div>
-
-      <div class="row">
+      <div class="row choose">
         <div class="column">
           <button class="btn-light btn-lg buttn" type="submit" 
           style="background-color: #F9573F; color: aliceblue;">
