--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -33,7 +33,7 @@
   </div>
   
   <!--side navbar-->
-  <div class="container-fluid">
+  <div class="container-fluid image">
       <div class="row">
         <!-- <div class="column sidebar"> -->
           <div class="col-6 sidebar">
@@ -46,26 +46,26 @@
           </div>
         <!-- </div> -->
 
-        <div class="col-6">
-            <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" 
-            alt="..." width="300px" height="350px">      
-        </div>
+          <div class="col-6 img">
+              <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" 
+              alt="..." width="300px" height="350px">      
+          </div>
 
-        <div class="col-6">
-            <img src="../../../assets/images/web.png" class="rounded float-end" 
-            alt="..." width="300px" height="350px"> 
-        </div>
-        <br>
-        <br>
+          <div class="col-6 img1">
+              <img src="../../../assets/images/web.png" class="rounded float-end" 
+              alt="..." width="300px" height="350px"> 
+          </div>
+          <br>
+          <br>
 
-        <div class="col-6 track">
-          <button type="button" class="btn btn-link" 
-          style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
-        </div>
-        <div class="col-6 track">
-          <button type="button" class="btn btn-link" 
-          style="background-color: #101F3C; color: aliceblue; text-decoration: none">Web Development</button>
-        </div>
+          <div class="col-6 track">
+            <button type="button" class="btn btn-link" 
+            style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
+          </div>
+          <div class="col-6 track1">
+            <button type="button" class="btn btn-link" 
+            style="background-color: #101F3C; color: aliceblue; text-decoration: none">Web Development</button>
+          </div>
 
       <div class="row choose">
         <div class="column">
