--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -69,7 +69,7 @@
       </div>
       
       <div class="card-body">
-        <p class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</p>
+        <p class="card-title">Description: Lorem ipsum dolor sit amet consectetur adipisicing. Doloribus fuga architecto explicabo quisquam ex delectus libero, adipisci suscipit quam aperiam eveniet! Vitae quos assumenda tenetur, quia magni rerum dolores soluta.</p>
       </div>
       <div class="card-body">
         <p class="card-title">Track: Android.</p>
