--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -5,22 +5,45 @@
     </div>
 <div class="bookers">
     <h3 id="reg">Edit Your Profile</h3>
-    <form>
+
+
+    <form  #loginForm="ngForm" novalidate>
+
+
+
 <div class="avar">
 <img src="https://cdn.pixabay.com/photo/2021/12/21/08/29/owl-6884773_960_720.jpg" class="avatar"
     alt="avatar">
 </div>
 
     <div class='insameline'> 
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Username">
 
+        <input type="text" placeholder="Firstname" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+        class="form-control"   name="username" ngModel>
+        <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Firstname is required</small>
+            
+        
+        
+        <input type="text" placeholder="Lastname" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+        class="form-control"   name="username" ngModel>
+        <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Lastname is required</small>
+                 
+        
+        <input type="text" placeholder="Username" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+        class="form-control"   name="username" ngModel>
+        <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Username is required</small>
+         
 </div>
 
 <div class='insameline-1'> 
-    <input type="text" placeholder="phone"> 
-    <input type="text" placeholder="Bio"> 
+    <input type="text" placeholder="Bio" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+    class="form-control"   name="username" ngModel>
+    <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Bio is required</small>
+         
+    <input type="text" placeholder="Phone Number" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" 
+    class="form-control"   name="username" ngModel>
+    <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Phone Number is required</small>
+         
     <div class="upload">
         <input type="file" class="form-control" id="customFile" />
         </div>     
