modified routing logic

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -47,7 +47,7 @@
 
 
 <div class="already">
-    <a routerLink="/register">Already have an account please login</a>
+    <a routerLink="/login">Already have an account please login</a>
 </div>
 </div>
 
