--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active bar" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
+            <a class="nav-link active bar" aria-current="page" routerLink="home/" style="color: #F9573F; font-weight: 600;"> 
               Home</a>
           </li>
           <li class="nav-item">
