configured add project button route

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,9 +5,9 @@
         <!-- <div class="column sidebar"> -->
           <div class="col-6 sidebar">
             <ul>
-              <li><button class="btn-light btn-lg" type="submit">About</button></li>
+              <li><button class="btn-light btn-lg"  type="submit">About</button></li>
               <li><button class="btn-light btn-lg" type="submit">Profile</button></li>
-              <li><button class="btn-light btn-lg" type="submit">Add Project</button></li>
+              <li><button class="btn-light btn-lg" (click)="project()" type="submit">Add Project</button></li>
               <li><button class="btn-light btn-lg" type="submit">Contact Us</button></li>
             </ul>    
           </div>
