--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -25,7 +25,7 @@
           <br>
 
           <div class="col-6 track">
-            <button type="button" class="btn btn-link" 
+            <button type="button" (click)="projects()" class="btn btn-link" 
             style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
           </div>
           <div class="col-6 track1">
