--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
+    <!-- <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
@@ -17,10 +17,16 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
   <!--about us-->
-  <div class="bg-image"></div>
+  <div class="bg-image">
+    <h1>hey</h1>
+
+
+
+    
+  </div>
     <div class="bg-text">
       <h2 style="font-size: 3em; color: #F9573F;">Project Tracker</h2>
       <p style="font-size: 25px; color: white; font-weight: 600;"> 
