added login  register and logout functionalities

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
               Profile</a>
           </li>
           <li class="nav-item active bar">
-            <a class="nav-link active bar" href="#" style="color: #F9573F; font-weight: 600;"> 
+            <a class="nav-link active bar" style="cursor:pointer;" (click)="logoutUser()" style="color: #F9573F; font-weight: 600;"> 
               Logout <span><i class="fa-solid fa-right-from-bracket"></i></span></a>
           </li>
         </ul>
