--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -11,22 +11,26 @@
 </div>
     <div class='insameline'>
         <input type="text" placeholder="Firstname" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched"
-        class="form-control"   name="username" ngModel>
+        class="form-control"   name="firstname" ngModel>
         <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Firstname is required</small>
+        
         <input type="text" placeholder="Lastname" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched"
-        class="form-control"   name="username" ngModel>
+        class="form-control"   name="lastname" ngModel>
         <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Lastname is required</small>
+        
         <input type="text" placeholder="Username" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched"
         class="form-control"   name="username" ngModel>
         <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Username is required</small>
 </div>
 <div class='insameline-1'>
     <input type="text" placeholder="Bio" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched"
-    class="form-control"   name="username" ngModel>
+    class="form-control"   name="bio" ngModel>
     <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Bio is required</small>
+    
     <input type="text" placeholder="Phone Number" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched"
-    class="form-control"   name="username" ngModel>
+    class="form-control"   name="phonenumber" ngModel>
     <small class="text-danger" [class.d-none] =" name.valid || name.untouched">Phone Number is required</small>
+    
     <div class="upload">
         <input type="file" class="form-control" id="customFile" />
         </div>
