--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,7 +6,7 @@
           <div class="col-6 sidebar">
             <ul>
               <li><button class="btn-light btn-lg"  type="submit">About</button></li>
-              <li><button class="btn-light btn-lg" type="submit">Profile</button></li>
+              <li><button class="btn-light btn-lg" routerLink="profile" type="submit">Profile</button></li>
               <li><button class="btn-light btn-lg" (click)="project()" type="submit">Add Project</button></li>
               <li><button class="btn-light btn-lg" type="submit">Contact Us</button></li>
             </ul>    
