--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light " style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
         <a class="navbar-brand" routerLink="/" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
@@ -19,5 +18,4 @@
         </ul>
       </div>
     </nav>
-  </div>
 
