Added margin top to the sidebar and fixed navbar to position fixed

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid image">
       <div class="row">
         <!-- <div class="column sidebar"> -->
-          <div class="sidebar">
+          <div class="sidebar mt-5">
             <ul>
               <li><button class="btn-light btn-lg"  type="submit">About</button></li>
               <li><button class="btn-light btn-lg" routerLink="profile" type="submit">Profile</button></li>
@@ -12,7 +12,7 @@
             </ul>    
           </div>
         <!-- </div> -->
-          <div class="main">
+          <div class="main mt-5">
             <div class="col-6 img">
               <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" 
               alt="..." width="300px" height="350px"> 
