--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -27,10 +27,10 @@
             <h4 class="projects text-center">About Project</h4>
             <hr>
             <ul>
-                <li><span class="info">Project Name:</span> <span class="details"> {{project.project_name}}</span></li>
+                <li><span class="info">Project Name:</span> <span class="details"> {{project.name}}</span></li>
                 <li><span class="info">Owner:</span> <span class="details"> {{project.owner}}</span></li>
-                <li><span class="info">Category:</span> <span class="details"> {{project.category}}</span></li>
-                <li><span class="info">View Repo:</span> <span class="details"> {{project.repo_link}}</span></li>
+                <li><span class="info">Track:</span> <span class="details"> {{project.track}}</span></li>
+                <li><span class="info">View Repo:</span> <span class="details"> {{project.github_link}}</span></li>
                 <li><span class="info">Project Description: </span> <span class="details"> {{project.description}}</span></li>
 
                 <li><span class="info">Technologies: </span> <span class="technology mt-2"> {{project.technologies}}</span> </li>
